endpoints adjustment 1